# GameofLifePython

./: README.md  config.txt  pyproject.toml  requirements.txt
docs/: index.html  search.js
docs/src/: game_of_life.html
docs/src/game_of_life/: board.html  simulation.html
src/: life.py
src/game_of_life/: board.py  simulation.py
src/tests/: test_board.py  test_simulation.py
