[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GameofLifePython"
version = "0.1.0"
description = "Conway's Game of Life simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dominika Lankiewicz"}, {name = "Maciej Małecki"}]
dependencies = [
    "matplotlib",
    "pillow"
]

[project.scripts]
game-of-life = "life:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
